--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "ajv": "^6.5.2",
+    "antd": "^3.9.1",
     "jquery": "^3.3.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-google-maps": "^9.4.5",
     "react-grid-gallery": "^0.5.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
